--- a/css/ProductPlan.css
+++ b/css/ProductPlan.css
@@ -22,18 +22,29 @@ body {
 	font-weight: 700;
 }
 
-.zhongwen {
+.zhongwen{
 	font-size: 14px;
 	color: #000000;
 	line-height: 16px;
 	font-weight: 700;
 }
-
-.yingwen {
+.xzhongwen{
+	font-size: 10px;
+	color: #000000;
+	line-height: 16px;
+	font-weight: 600;
+}
+.yingwen{
 	font-size: 18px;
 	color: #000000;
 	line-height: 20px;
 	font-weight: 700;
+}
+.xyingwen{
+	font-size: 14px;
+	color: #000000;
+	line-height: 20px;
+	font-weight: 600;
 }
 
 
@@ -41,8 +52,9 @@ body {
 
 .top-area {
 	width: 100%;
-	height: 820px;
+	height: 840px;
 	background-color: #FFFFFF;
+	position: relative;
 }
 
 .top-area .top-area-line {
@@ -50,8 +62,16 @@ body {
 	height: 6px;
 	background-color: #E94F25;
 }
-
-
+.top-area .bgceng{
+	height: 500px;
+	width: 800px;
+	position: absolute;
+	top: 85px;
+	left: 170px;
+}
+.top-area .bgceng img{
+	width: 885px;
+}
 /*顶部菜单*/
 
 .top-area .top-area-menu {
@@ -71,8 +91,6 @@ body {
 	font-weight: 700;
 	letter-spacing: 8px;
 }
-
-
 
 .top-area-menu .menu-input {
 	position: absolute;
@@ -113,7 +131,6 @@ body {
 
 .top-area .top-area-content {
 	width: 100%;
-	/*height: 900px;*/
 	margin-top: 40px;
 	box-sizing: border-box;
 	background-size: cover;
@@ -167,32 +184,32 @@ body {
 	/*background-color: green;*/
 }
 
-.content-about .content-about-me li {
-	width: 230px;
-	color: #283452;
-	margin-bottom: 30px;
+.top-area-content .top-content{
+	position: absolute;
+	top: 105px;
+	left: 400px;
 }
-
-.content-about .content-about-me li span {
-	font-size: 24px;
-}
-
-.top-area-content .content-about .jianjjie p {
+.top-area-content .top-content .firstul li .gaishu{
+	width: 570px;
+	height: 60px;
 	text-indent: 2em;
-	line-height: 20px;
+	margin: 10px 0px;
 }
 
-.top-area-content .content-img {
-	width: 50%;
-	background-color: pink;
-	margin-right: 0px;
+.top-area-content .top-content .secondul{
+	margin-top: 15px;
+	color: #283452;
 }
-
-.top-area-content .content-img img {
-	height: 634px;
-	border: 0;
+.top-area-content .top-content .secondul li{
+	margin-top: 10px;
 }
-
+.top-area-content .top-content .secondul b{
+	font-size: 22px;
+	color: #B1C0C8;
+}
+.top-area-content .top-content .secondul p{
+	font-size: 14px;
+}
 
 /*----------------bottom-area---------------*/
 
@@ -201,97 +218,7 @@ body {
 	height: 800px;
 	position: relative;
 }
-.bottom-area .bgceng {
-	height: 500px;
-	width: 800px;
-	position: absolute;
-	top: 0px;
-	left: 170px;
-}
-
-.bottom-area .bgceng img {
-	width: 885px;
-}
-
-.bottom-area .bottom-area-title {
-	height: 800px;
-	padding-left: 25px;
-	box-sizing: border-box;
-	background-color: #FFFFFF;
-}
-
-.bottom-area .logo-yun {
-	width: 18%;
-	height: 78px;
-	position: relative;
-}
-
-.bottom-area .logo-yun img {
-	width: 150px;
-	position: absolute;
-	top: -35px;
-	left: 0px;
-}
-
-.bottom-area-title .title li {
-	margin-bottom: 20px;
-	position: relative;
-}
-
-.bottom-area-title .title .menu-acticve:hover span {
-	display: block;
-}
-
-.bottom-area-title .title li span {
-	display: none;
-	width: 10px;
-	height: 10px;
-	border-radius: 50%;
-	background-color: #E94F25;
-	position: absolute;
-	top: 10px;
-	left: -15px;
-}
-
-.bottom-area-title .bottom-menu {
-	width: 800px;
-	height: 500px;
-	margin-top: 40px;
-}
-
-.bottom-area-title .bottom-menu li {
-	width: 18%;
-	margin-right: 2%;
-	float: left;
-	position: relative;
-}
-
-.bottom-area-title .bottom-menu li>i {
-	position: absolute;
-	top: -30px;
-	width: 20px;
-	height: 20px;
-	color: #000000;
-	font-size: 20px;
-	/*background-color: black;*/
-}
-
-.bottom-area-title .bottom-menu li>span {
-	position: absolute;
-	top: 75px;
-	display: block;
-	width: 99%;
-	text-indent: 2em;
-	line-height: 20px;
-	text-align: justify;
-	font-weight: 500;
-}
-
-.bottom-area-title .bottom-menu li:nth-of-type(1) {
-	width: 15%;
-}
-
-.bottom-area-title .bottom-menu li:nth-of-type(5) {
-	width: 21%;
+.bottom-area>img{
+	height: 790px;
 }
 
