--- a/css/AboutMe.css
+++ b/css/AboutMe.css
@@ -1,11 +1,7 @@
+html,
 body {
-	background-color: #E5EBEE;
-}
-
-.content {
-	width: 75%;
-	border: 6px solid #E94F25;
-	border-top: 0px;
+	height: 100%;
+	min-width: 1200px;
 }
 
 .titlep {
@@ -37,34 +33,37 @@ body {
 }
 
 
-/*----------------top-area---------------*/
+/*顶部开始*/
 
-.top-area {
-	width: 100%;
-	height: 820px;
-	background-color: #FFFFFF;
-}
-
-.top-area .top-area-line {
-	width: 100%;
-	height: 6px;
-	background-color: #E94F25;
-}
-
-
-/*顶部菜单*/
-
-.top-area .top-area-menu {
-	width: 100%;
-	height: 40px;
-	padding: 0px 40px;
-	box-sizing: border-box;
-	/*background-color: red;*/
+.box {
 	position: relative;
+	width: 100%;
+	height: 1750px;
+	z-index: 50;
+	overflow: hidden;
+	min-width: 953px;
+	border: 5px solid #E94F25;
 }
 
-.top-area-menu .menu-logo {
-	margin-top: 30px;
+.lo-ss {
+	width: 1100px;
+	margin: 0 auto;
+}
+
+
+/*logo搜索开始*/
+
+.loss {
+	height: 68px;
+	position: absolute;
+	top: 0px;
+	left: 50%;
+	margin-left: -550px;
+}
+
+.logo {
+	float: left;
+	margin-top: 20px;
 	font-size: 26px;
 	line-height: 40px;
 	color: #283452;
@@ -72,53 +71,57 @@ body {
 	letter-spacing: 8px;
 }
 
-
-
-.top-area-menu .menu-input {
-	position: absolute;
-	top: 10px;
-	left: 750px;
-}
-
-.top-area-menu .menu-input input {
+.ssuo {
+	float: right;
+	width: 320px;
 	height: 30px;
-	width: 180px;
-}
-
-.top-area-menu .menu-input span {
-	display: block;
-	width: 30px;
-	height: 30px;
-	position: absolute;
-	top: 0px;
-	left: 200px;
-	background-color: #283452;
-	border-radius: 5px;
-}
-
-.top-area-menu .menu-input span img {
-	width: 16px;
-	margin: 7px;
-}
-
-.top-area-menu .menu-input>img {
-	position: absolute;
-	top: -3px;
-	left: 240px;
-	height: 36px;
-}
-
-
-/*顶部*/
-
-.top-area .top-area-content {
-	width: 100%;
-	/*height: 900px;*/
-	margin-top: 40px;
-	box-sizing: border-box;
-	background-size: cover;
+	margin-top: 20px;
 	position: relative;
-	/*background-color: red;*/
+}
+
+.ssuo input {
+	float: left;
+	width: 76%;
+	height: 27px;
+	padding: 0 10px;
+	border: 2px solid #B1C0C8;
+	border-radius: 3px;
+}
+
+.ssuo .search {
+	background: #003660;
+	float: left;
+	width: 30px;
+	height: 26px;
+	margin-left: 3%;
+	padding: 5px 7px;
+	box-sizing: border-box;
+}
+
+.ssuo .search img {
+	width: 16px;
+}
+
+.ssuo .all {
+	width: 30px;
+	position: absolute;
+	top: -2px;
+	right: 0px;
+}
+
+.ssuo .all img {
+	width: 30px;
+}
+
+
+/*logo搜索结束*/
+
+.top-area-content {
+	margin-top: 40px;
+	position: relative;
+	top: 50px;
+	left: 50%;
+	margin-left: -550px;
 }
 
 .top-area-content>div {
@@ -131,7 +134,7 @@ body {
 }
 
 .content-menu .big-menu {
-	padding-left: 25px;
+	padding-left: 15px;
 	box-sizing: border-box;
 }
 
@@ -163,8 +166,6 @@ body {
 
 .top-area-content .content-about {
 	width: 28%;
-	height: 100px;
-	/*background-color: green;*/
 }
 
 .content-about .content-about-me li {
@@ -177,40 +178,38 @@ body {
 	font-size: 24px;
 }
 
-.top-area-content .content-about .jianjjie p {
+.top-area-content .content-about .jianjie p {
 	text-indent: 2em;
 	line-height: 20px;
 }
 
 .top-area-content .content-img {
 	width: 50%;
-	background-color: pink;
 	margin-right: 0px;
 }
 
 .top-area-content .content-img img {
-	height: 634px;
-	border: 0;
+	height: 740px;
 }
-
-
-/*----------------bottom-area---------------*/
 
 .bottom-area {
-	width: 100%;
 	height: 800px;
 	position: relative;
+	top: 100px;
+	left: 50%;
+	margin-left: -550px;
 }
+
 .bottom-area .bgceng {
 	height: 500px;
-	width: 800px;
+	width: 1000px;
 	position: absolute;
 	top: 0px;
 	left: 170px;
 }
 
 .bottom-area .bgceng img {
-	width: 885px;
+	width: 1000px;
 }
 
 .bottom-area .bottom-area-title {
@@ -273,7 +272,6 @@ body {
 	height: 20px;
 	color: #000000;
 	font-size: 20px;
-	/*background-color: black;*/
 }
 
 .bottom-area-title .bottom-menu li>span {
@@ -294,4 +292,3 @@ body {
 .bottom-area-title .bottom-menu li:nth-of-type(5) {
 	width: 21%;
 }
-
