--- a/css/home.css
+++ b/css/home.css
@@ -4,9 +4,6 @@ body {
 	min-width: 1200px;
 }
 
-
-/*顶部开始*/
-
 .box {
 	position: relative;
 	width: 100%;
@@ -15,7 +12,7 @@ body {
 	overflow: hidden;
 	min-width: 953px;
 }
-
+/*顶部背景开始*/
 .imgList {
 	position: relative;
 	height: 850px;
@@ -40,7 +37,7 @@ body {
 	background-position: center center;
 	background-size: inherit;
 }
-
+/*顶部背景结束*/
 .lo-ss {
 	width: 1100px;
 	margin: 0 auto;
@@ -48,7 +45,6 @@ body {
 
 
 /*logo搜索开始*/
-
 .loss {
 	height: 68px;
 	position: absolute;
@@ -122,12 +118,10 @@ body {
 .ssuo .all img {
 	width: 40px;
 }
-
-
 /*logo搜索结束*/
 
 
-/*顶部标题开始*/
+/*顶部主题开始*/
 
 .top-area-title {
 	height: 450px;
@@ -257,8 +251,7 @@ body {
 .right-title>span {
 	margin-top: 110px;
 }
-
-/*扇形部分结束*/
+/*扇形部分结束*/ /*顶部主题结束*/
 /*轮播开始*/
 .banner {
 	height: 230px;
@@ -305,7 +298,6 @@ body {
 	margin-right: 10px;
 }
 
-
 /*顶部banner视频部分*/
 
 .banner .banner-content .banner-video {
@@ -323,8 +315,7 @@ body {
 }
 /*轮播结束*/
 
-/*顶部标题结束*/
-
+/*底部主题开始*/
 .daohang {
 	height: 750px;
 }
@@ -426,9 +417,7 @@ body {
 	line-height: 18px;
 	font-weight: 700;
 }
-
-/*导航结束*/
-/*底部开始结束*/
+/*底部主题结束*/
 .bottom-area {
 	width: 100%;
 	height: 80px;
