--- a/css/ProductPlan.css
+++ b/css/ProductPlan.css
@@ -1,91 +1,76 @@
+html,
 body {
-	background-color: #E5EBEE;
+	height: 100%;
+	min-width: 1200px;
 }
-
-.content {
-	width: 75%;
-	border: 6px solid #E94F25;
-	border-top: 0px;
-}
-
-.titlep {
+.titlep{
 	color: #E94F25;
-	font-size: 10px;
+	font-size:10px ;
 	line-height: 14px;
 	font-weight: 700;
 }
-
-.titley {
+.titley{
 	color: #E94F25;
-	font-size: 14px;
+	font-size:14px ;
 	line-height: 18px;
 	font-weight: 700;
 }
-
 .zhongwen{
 	font-size: 14px;
-	color: #000000;
+	color: #FFFFFF;
 	line-height: 16px;
 	font-weight: 700;
 }
 .xzhongwen{
 	font-size: 10px;
-	color: #000000;
+	color: #FFFFFF;
 	line-height: 16px;
 	font-weight: 600;
 }
 .yingwen{
 	font-size: 18px;
-	color: #000000;
+	color: #FFFFFF;
 	line-height: 20px;
 	font-weight: 700;
 }
 .xyingwen{
 	font-size: 14px;
-	color: #000000;
+	color: #FFFFFF;
 	line-height: 20px;
 	font-weight: 600;
 }
 
-
-/*----------------top-area---------------*/
-
-.top-area {
-	width: 100%;
-	height: 840px;
-	background-color: #FFFFFF;
+.box {
 	position: relative;
+	width: 100%;
+	height: 3000px;
+	z-index: 50;
+	overflow: hidden;
+	min-width: 953px;
+	/*border: 5px solid #E94F25;*/
 }
 
-.top-area .top-area-line {
-	width: 100%;
-	height: 6px;
-	background-color: #E94F25;
+.lo-ss {
+	width: 1140px;
+	margin: 0 auto;
 }
-.top-area .bgceng{
-	height: 500px;
-	width: 800px;
+/*logo搜索开始*/
+.loss {
+	height: 68px;
 	position: absolute;
-	top: 85px;
-	left: 170px;
-}
-.top-area .bgceng img{
-	width: 885px;
-}
-/*顶部菜单*/
-
-.top-area .top-area-menu {
-	width: 100%;
-	height: 40px;
-	padding: 0px 25px;
+	top: 0px;
+	left: 50%;
+	margin-left: -570px;
+	padding: 0px 20px;
 	box-sizing: border-box;
-	/*background-color: red;*/
-	position: relative;
+	border: 5px solid #E94F25;
+	border-width: 5px 5px 0px 5px;
+	
 }
 
-.top-area-menu .menu-logo,
-.bottom-logo .menu-logo {
-	margin-top: 30px;
+.logo {
+	float: left;
+	margin-top: 20px;
 	font-size: 26px;
 	line-height: 40px;
 	color: #283452;
@@ -93,68 +78,105 @@ body {
 	letter-spacing: 8px;
 }
 
-.top-area-menu .menu-input {
-	position: absolute;
-	top: 10px;
-	left: 750px;
+.menu {
+	margin-top: 30px;
+	margin-left: 40px;
 }
 
-.top-area-menu .menu-input input {
+.menu .menu-items {
+	float: left;
+	margin-right: 40px;
+	font-weight: 700;
+}
+
+.menu .menu-items:hover {
+	border-bottom: 4px solid #E94F25;
+}
+
+.ssuo {
+	float: right;
+	width: 320px;
 	height: 30px;
-	width: 180px;
-}
-
-.top-area-menu .menu-input span {
-	display: block;
-	width: 30px;
-	height: 30px;
-	position: absolute;
-	top: 0px;
-	left: 200px;
-	background-color: #283452;
-	border-radius: 5px;
-}
-
-.top-area-menu .menu-input span img {
-	width: 16px;
-	margin: 7px;
-}
-
-.top-area-menu .menu-input>img {
-	position: absolute;
-	top: -3px;
-	left: 240px;
-	height: 36px;
-}
-
-
-/*顶部*/
-
-.top-area .top-area-content {
-	width: 100%;
-	margin-top: 40px;
-	box-sizing: border-box;
-	background-size: cover;
+	margin-top: 20px;
 	position: relative;
-	/*background-color: red;*/
 }
 
+.ssuo input {
+	float: left;
+	width: 76%;
+	height: 27px;
+	padding: 0 10px;
+	border: 2px solid #B1C0C8;
+	border-radius: 3px;
+}
+
+.ssuo .search {
+	background: #003660;
+	float: left;
+	width: 30px;
+	height: 26px;
+	margin-left: 3%;
+	padding: 5px 7px;
+	box-sizing: border-box;
+}
+
+.ssuo .search img {
+	width: 16px;
+}
+
+.ssuo .all {
+	width: 30px;
+	position: absolute;
+	top: -2px;
+	right: 0px;
+}
+
+.ssuo .all img {
+	width: 30px;
+}
+
+/*logo搜索结束*/
+
+/*顶部标题开始*/
+.top-area-content {
+	height: 900px;
+	position: absolute;
+	top: 40px;
+	left: 50%;
+	margin-left: -570px;
+	padding: 0 20px;
+	box-sizing: border-box;
+	border: 5px solid #E94F25;
+	border-width: 0px 5px ;
+}
+.top-area-content .bgceng {
+	height: 700px;
+	width: 935px;
+	position: absolute;
+	top: 40px;
+	right: 0px;
+}
+
+.top-area-content .bgceng img {
+	width: 965px;
+}
 .top-area-content>div {
 	float: left;
 	margin-right: 2%;
 }
 
 .top-area-content .content-menu {
-	width: 18%;
+	margin-top: 40px;
+	width: 25%;
 }
 
 .content-menu .big-menu {
-	padding-left: 25px;
+	padding-left: 6%;
 	box-sizing: border-box;
 }
 
 .content-menu .big-menu li {
-	width: 150px;
+	width: 170px;
 	color: #B1C0C8;
 	margin-bottom: 10px;
 	font-weight: 700;
@@ -178,18 +200,12 @@ body {
 	top: 10px;
 	left: -15px;
 }
-
-.top-area-content .content-about {
-	width: 28%;
-	height: 100px;
-	/*background-color: green;*/
-}
-
 .top-area-content .top-content{
 	position: absolute;
-	top: 105px;
-	left: 400px;
+	top: 195px;
+	right: 16%;
 }
+
 .top-area-content .top-content .firstul li .gaishu{
 	width: 570px;
 	height: 60px;
@@ -198,7 +214,7 @@ body {
 }
 
 .top-area-content .top-content .secondul{
-	margin-top: 55px;
+	/*margin-top: 55px;*/
 	color: #283452;
 }
 .top-area-content .top-content .secondul li{
@@ -211,82 +227,178 @@ body {
 .top-area-content .top-content .secondul p{
 	font-size: 14px;
 }
+/*顶部标题结束*/
 
-/*----------------bottom-area---------------*/
-
-.bottom-area {
-	width: 100%;
-	height: 800px;
-	position: relative;
+/*中间部分开始*/
+.middle-area {
+	/*height: 80px;*/
+	position: absolute;
+	margin: 0 auto;
+	top: 940px;
+	left: 50%;
+	margin-left: -570px;
+	background-color: #283452;
+	border: 5px solid #E94F25;
+	border-width: 0px 5px;
 }
-.bottom-area>img{
-	height: 792px;
+.middle-area .bg-img{
+	width: 1100px;
 }
-
-.bottom-area .bottom-logo{
+.bottom-logo{
 	width: 295px;
 	height: 90px;
-	/*background-color: red;*/
 	position: absolute;
-	top: 12px;
-	right: 11px;
-}
-.bottom-area .bottom-logo img{
-	position: absolute;
-	top: 0px;
-	right: 25px;
-	height: 105px;
-}
-.bottom-logo .menu-logo{
+	top: 75px;
+	right: 6%;
+	font-size: 26px;
+	line-height: 40px;
 	color: #FFFFFF;
-}
-
-.bottom-area .big-menu {
-	position: absolute;
-	top: 78px;
-	left: 40px;
-	padding-left: 25px;
-	box-sizing: border-box;
-}
-
-.bottom-area .big-menu li {
-	width: 150px;
-	color: #FFFFFF;
-	margin-bottom: 40px;
 	font-weight: 700;
+	letter-spacing: 8px;
 }
-.bottom-area .title-tips {
+.middle-area .big-title{
 	position: absolute;
-	top: 128px;
-	left: 36px;
-	width: 250px;
-	height: 65px;
-	background-image: linear-gradient(0deg,#E5EBEE 50%,#B1C0C8 100%);
-	border: 8px solid #E5EBEE;
-	border-radius: 40px;
-	padding: 8px 15px;
-	box-sizing: border-box;
+	top: 105px;
+	left: 6%;
 }
-.bottom-area .title-tips span{
-	display: inline-block;
-	font-size: 6px;
-}
-.bottom-area .detail-menu{
+.middle-area .s-title{
+	width: 280px;
 	position: absolute;
-	top: 265px;
-	left: 174px;
+	top: 21%;
+	left: 6%;
 }
-.bottom-area .detail-menu>p{
-	font-size: 10px;
-	font-weight: 700;
-}
-/*.bottom-area .detail-menu dd{
-	font-size: 10px;
-	font-weight: 700;
-	color: #FFFFFF;
+.middle-area .s-title span{
+	display: block;
 	float: left;
-	width: 136px;
-	background-color: red;
-	margin-right: 2px;
+	width: 78px;
+	margin-right: 6px;
+	text-align: left;
+	color: #283452;
+	font-weight: 700;
+}
+.middle-area .s-title span:nth-of-type(3),
+.middle-area .s-title span:nth-of-type(6){
+	margin-right: 0px;
+}
+.agg{
+	width: 1100px;
+	margin: 0 auto;
+}
+.middle-area .menu-detail{
+	height: 100px;
+	position: absolute;
+	padding-left: 138px;
+	top: 268px;
+	/*background-color: red;*/
+	/*opacity: 0.1;*/
+}
+.menu-detail ul{
+	overflow: hidden;
+}
+.menu-detail ul li{
+	float: left;
+}
+
+.a-ul{
+	position: relative;
+}
+
+.a-ul ul:nth-of-type(1) li,
+.a-ul ul:nth-of-type(4) li,
+.a-ul ul:nth-of-type(7) li{
+	font-size: 14px;
+	color: #283452;
+	text-align: center;
+	line-height: 24px;
+	width: 134px;
+	font-weight: 700;
 	margin-top: 6px;
-}*/
+	margin-left: 6px;
+}
+
+.a-ul ul:nth-of-type(2) li,
+.a-ul ul:nth-of-type(3) li,
+.a-ul ul:nth-of-type(5) li,
+.a-ul ul:nth-of-type(6) li{
+	font-size: 14px;
+	color: #FFFFFF;
+	text-align: center;
+	line-height: 24px;
+	width: 134px;
+	font-weight: 700;
+	margin-top: 1px;
+	margin-left: 6px;
+}
+.a-ul ul:nth-of-type(3) li{
+	margin-top: 4px;
+}
+.a-ul ul:nth-of-type(4) li{
+	margin-top: 8px;
+}
+.a-ul ul:nth-of-type(6) li{
+	margin-top: 5px;
+}
+.a-ul ul:nth-of-type(7){
+	position: absolute;
+	top: 122px;
+	right: 260px;
+}
+.b-ul,
+.c-ul{
+	position: absolute;
+	top: 275px;
+	left: 115px;
+}
+.b-ul>ul{
+	float: left;
+}
+.b-ul ul li,
+.c-ul ul li{
+	font-size: 14px;
+	color: #FFFFFF;
+	text-align: left;
+	line-height: 24px;
+	width: 150px;
+	font-weight: 700;
+	margin-top: 1px;
+	margin-left: 6px;
+	float: none;
+}
+.c-ul{
+	top: 230px;
+	left: auto;
+	right: 150px;
+}
+.c-ul ul{
+	margin-top: 10px;
+}
+.c-ul ul li{
+	font-size: 15px;
+	
+}
+/*中间部分结束*/
+
+/*底部部分开始*/
+.bottom-area{
+	/*height: 400px;*/
+	position: absolute;
+	margin: 0 auto;
+	top: 1765px;
+	left: 50%;
+	margin-left: -570px;
+	border: 5px solid #E94F25;
+	border-width: 0px 5px 5px 5px;
+}
+.bottom-area>img{
+	width: 100%;
+}
+.bottom-area-content{
+	position: absolute;
+	top: 300px;
+	left: 300px;
+	width: 700px;
+	height: 500px;
+	background-color: red;
+}
+.bottom-area-content .
+/*底部部分结束*/
