--- a/css/AboutMe.css
+++ b/css/AboutMe.css
@@ -132,6 +132,7 @@ body {
 }
 
 .top-area-content .content-menu {
+	margin-top: 20px;
 	width: 18%;
 }
 
@@ -142,7 +143,7 @@ body {
 
 .content-menu .big-menu li {
 	width: 150px;
-	color: #B1C0C8;
+	color: #888888;;
 	margin-bottom: 10px;
 	font-weight: 700;
 }
@@ -283,6 +284,7 @@ body {
 	text-indent: 2em;
 	line-height: 20px;
 	text-align: justify;
+	text-justify: inter-ideograph;/*IE*/
 	font-weight: 500;
 }
 
