--- a/css/NewsInfo.css
+++ b/css/NewsInfo.css
@@ -201,31 +201,41 @@ body {
 	left: -15px;
 }
 .top-area-content .top-content{
+	/*width: 570px;*/
 	position: absolute;
 	top: 195px;
-	right: 16%;
+	right: 10%;
 }
 
-.top-area-content .top-content .firstul li .gaishu{
-	width: 570px;
+.top-area-content .top-content .firstul{
+	width: 636px;
 	height: 60px;
-	text-indent: 2em;
 	margin: 10px 0px;
 }
-
-.top-area-content .top-content .secondul{
-	/*margin-top: 55px;*/
+.top-content .firstul .titlep{
+	font-size: 26px;
 	color: #283452;
+	line-height: 30px;
+	letter-spacing:2px;
+	text-indent:0;
+	font-weight: 700;
 }
-.top-area-content .top-content .secondul li{
-	margin-top: 25px;
+.top-content .firstul p{
+	text-indent: 2em;
+	text-align: justify;
+    text-justify: inter-ideograph;/*IE*/
 }
-.top-area-content .top-content .secondul b{
-	font-size: 22px;
-	color: #888888;
+.top-content .firstul p:nth-of-type(3),
+.top-content .firstul p:nth-of-type(4){
+	font-size: 16px;
+	letter-spacing:0px;
+	line-height: 20px;
+	font-weight: 600;
 }
-.top-area-content .top-content .secondul p{
-	font-size: 14px;
-	color: #888888;
+
+.top-content .firstul p:nth-of-type(4){
+	margin-bottom: 20px;
 }
+
+
 /*顶部标题结束*/
