--- a/css/AboutMe.css
+++ b/css/AboutMe.css
@@ -1,7 +1,7 @@
 html,
 body {
 	height: 100%;
-	min-width: 1200px;
+	min-width: 1100px;
 }
 
 .titlep {
@@ -85,7 +85,7 @@ body {
 	width: 76%;
 	height: 27px;
 	padding: 0 10px;
-	border: 2px solid #B1C0C8;
+	border: 2px solid #888888;
 	border-radius: 3px;
 }
 
