--- a/css/NewsInfo.css
+++ b/css/NewsInfo.css
@@ -1,7 +1,7 @@
 html,
 body {
 	height: 100%;
-	min-width: 1200px;
+	min-width: 1100px;
 }
 .titlep{
 	color: #E94F25;
@@ -43,15 +43,14 @@ body {
 .box {
 	position: relative;
 	width: 100%;
-	height: 3000px;
+	height: 1100px;
 	z-index: 50;
 	overflow: hidden;
 	min-width: 953px;
-	/*border: 5px solid #E94F25;*/
 }
 
 .lo-ss {
-	width: 1140px;
+	width: 1100px;
 	margin: 0 auto;
 }
 /*logo搜索开始*/
@@ -60,7 +59,7 @@ body {
 	position: absolute;
 	top: 0px;
 	left: 50%;
-	margin-left: -570px;
+	margin-left: -550px;
 	padding: 0px 20px;
 	box-sizing: border-box;
 	border: 5px solid #E94F25;
@@ -106,7 +105,7 @@ body {
 	width: 76%;
 	height: 27px;
 	padding: 0 10px;
-	border: 2px solid #B1C0C8;
+	border: 2px solid #888888;
 	border-radius: 3px;
 }
 
@@ -143,7 +142,7 @@ body {
 	position: absolute;
 	top: 40px;
 	left: 50%;
-	margin-left: -570px;
+	margin-left: -550px;
 	padding: 0 20px;
 	box-sizing: border-box;
 	border: 5px solid #E94F25;
@@ -201,15 +200,14 @@ body {
 	left: -15px;
 }
 .top-area-content .top-content{
-	/*width: 570px;*/
 	position: absolute;
 	top: 195px;
-	right: 10%;
+	right: 16%;
 }
 
 .top-area-content .top-content .firstul{
 	width: 636px;
-	height: 60px;
+	/*height: 60px;*/
 	margin: 10px 0px;
 }
 .top-content .firstul .titlep{
@@ -232,10 +230,9 @@ body {
 	line-height: 20px;
 	font-weight: 600;
 }
-
 .top-content .firstul p:nth-of-type(4){
 	margin-bottom: 20px;
 }
 
-
 /*顶部标题结束*/
+
