--- a/css/ProductPlan.css
+++ b/css/ProductPlan.css
@@ -1,7 +1,7 @@
 html,
 body {
 	height: 100%;
-	min-width: 1200px;
+	min-width: 1100px;
 }
 .titlep{
 	color: #E94F25;
@@ -51,16 +51,17 @@ body {
 }
 
 .lo-ss {
-	width: 1140px;
+	width: 1100px;
 	margin: 0 auto;
 }
 /*logo搜索开始*/
 .loss {
+	width: 1100px;
 	height: 68px;
 	position: absolute;
 	top: 0px;
 	left: 50%;
-	margin-left: -570px;
+	margin-left: -550px;
 	padding: 0px 20px;
 	box-sizing: border-box;
 	border: 5px solid #E94F25;
@@ -106,7 +107,7 @@ body {
 	width: 76%;
 	height: 27px;
 	padding: 0 10px;
-	border: 2px solid #B1C0C8;
+	border: 2px solid #888888;
 	border-radius: 3px;
 }
 
@@ -143,7 +144,7 @@ body {
 	position: absolute;
 	top: 40px;
 	left: 50%;
-	margin-left: -570px;
+	margin-left: -550px;
 	padding: 0 20px;
 	box-sizing: border-box;
 	border: 5px solid #E94F25;
@@ -237,7 +238,7 @@ body {
 	margin: 0 auto;
 	top: 940px;
 	left: 50%;
-	margin-left: -570px;
+	margin-left: -550px;
 	background-color: #283452;
 	border: 5px solid #E94F25;
 	border-width: 0px 5px;
@@ -386,7 +387,7 @@ body {
 	margin: 0 auto;
 	top: 1765px;
 	left: 50%;
-	margin-left: -570px;
+	margin-left: -550px;
 	border: 5px solid #E94F25;
 	border-width: 0px 5px 5px 5px;
 }
@@ -398,7 +399,7 @@ body {
 	position: absolute;
 	top: 300px;
 	left: 50%;
-	margin-left: -570px;
+	margin-left: -550px;
 }
 .bottom-area-content .bottom-img{
 	width: 180px;
@@ -422,6 +423,8 @@ body {
 	top: 32px;
 	left: 450px;
 }
+.middle-area .zhongwen,
+.middle-area .yingwen,
 .bottom-area-content .zhongwen,
 .bottom-area-content .yingwen{
 	color: #FFFFFF;
