--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,7 @@
 html,
 body {
 	height: 100%;
-	min-width: 1200px;
+	min-width: 1100px;
 }
 
 .box {
@@ -51,6 +51,8 @@ body {
 	top: 0px;
 	left: 50%;
 	margin-left: -550px;
+	padding: 0 20px;
+	box-sizing: border-box;
 }
 
 .logo {
@@ -129,7 +131,7 @@ body {
 	top: 100px;
 	left: 50%;
 	margin-left: -550px;
-	padding: 0px 15px;
+	padding: 0px 20px;
 	box-sizing: border-box;
 }
 
@@ -318,6 +320,8 @@ body {
 /*底部主题开始*/
 .daohang {
 	height: 750px;
+	padding: 0 20px;
+	box-sizing: border-box;
 }
 .si-dh li {
 	width: 100%;
@@ -399,7 +403,7 @@ body {
 	font-size: 8px;
 	line-height: 12px;
 	font-weight: 600;
-	color: #B1C0C8;
+	color: #888888;
 }
 .middle-area-content .menu-list-item>ul li p:last-child{
 	font-size: 12px;
