--- a/css/Login.css
+++ b/css/Login.css
@@ -43,7 +43,7 @@ body {
 .box {
 	position: relative;
 	width: 100%;
-	height: 1100px;
+	height: 2000px;
 	z-index: 50;
 	overflow: hidden;
 	min-width: 953px;
@@ -147,7 +147,7 @@ body {
 	padding: 0 20px;
 	box-sizing: border-box;
 	border: 5px solid #E94F25;
-	border-width: 0px 5px  5px 5px;
+	border-width: 0px 5px 0px 5px;
 }
 .top-area-content .bgceng {
 	height: 700px;
@@ -280,4 +280,18 @@ body {
 	border: 0px;
 }
 /*顶部标题结束*/
+/*底部部分开始*/
+.bottom-area {
+	height: 900px;
+	position: absolute;
+	top: 940px;
+	left: 50%;
+	margin-left: -550px;
+	padding: 0 20px;
+	box-sizing: border-box;
+	border: 5px solid #E94F25;
+	border-width: 0px 5px  5px 5px;
+	background-color: #FFFFFF;
+}
 
+/*底部部分结束*/
