--- a/css/ProductPlan2.css
+++ b/css/ProductPlan2.css
@@ -76,7 +76,9 @@ body {
 	font-weight: 700;
 	letter-spacing: 8px;
 }
-
+.logo a{
+	color: #283452;
+}
 .menu {
 	margin-top: 30px;
 	margin-left: 40px;
@@ -110,7 +112,7 @@ body {
 }
 
 .ssuo .search {
-	background: #003660;
+	background: #283452;
 	float: left;
 	width: 30px;
 	height: 26px;
@@ -140,7 +142,7 @@ body {
 .top-area-content {
 	height: 900px;
 	position: absolute;
-	top: 40px;
+	top: 60px;
 	left: 50%;
 	margin-left: -550px;
 	padding: 0 20px;
@@ -150,7 +152,7 @@ body {
 }
 .top-area-content .bgceng {
 	height: 700px;
-	width: 935px;
+	width: 870px;
 	position: absolute;
 	top: 40px;
 	right: 0px;
@@ -165,7 +167,7 @@ body {
 }
 
 .top-area-content .content-menu {
-	margin-top: 60px;
+	margin-top: 40px;
 	width: 25%;
 }
 
