--- a/css/NewsInfo.css
+++ b/css/NewsInfo.css
@@ -76,6 +76,9 @@ body {
 	font-weight: 700;
 	letter-spacing: 8px;
 }
+.logo a{
+	color: #283452;
+}
 
 .menu {
 	margin-top: 30px;
@@ -110,7 +113,7 @@ body {
 }
 
 .ssuo .search {
-	background: #003660;
+	background: #283452;
 	float: left;
 	width: 30px;
 	height: 26px;
@@ -140,7 +143,7 @@ body {
 .top-area-content {
 	height: 900px;
 	position: absolute;
-	top: 40px;
+	top: 60px;
 	left: 50%;
 	margin-left: -550px;
 	padding: 0 20px;
@@ -165,7 +168,7 @@ body {
 }
 
 .top-area-content .content-menu {
-	margin-top: 60px;
+	margin-top: 40px;
 	width: 25%;
 }
 
