--- a/css/ProductPlan.css
+++ b/css/ProductPlan.css
@@ -78,7 +78,9 @@ body {
 	font-weight: 700;
 	letter-spacing: 8px;
 }
-
+.logo a{
+	color: #283452;
+}
 .menu {
 	margin-top: 30px;
 	margin-left: 40px;
@@ -112,7 +114,7 @@ body {
 }
 
 .ssuo .search {
-	background: #003660;
+	background: #283452;
 	float: left;
 	width: 30px;
 	height: 26px;
@@ -142,7 +144,7 @@ body {
 .top-area-content {
 	height: 900px;
 	position: absolute;
-	top: 40px;
+	top: 60px;
 	left: 50%;
 	margin-left: -550px;
 	padding: 0 20px;
@@ -152,7 +154,7 @@ body {
 }
 .top-area-content .bgceng {
 	height: 700px;
-	width: 935px;
+	width: 870px;
 	position: absolute;
 	top: 40px;
 	right: 0px;
@@ -167,7 +169,7 @@ body {
 }
 
 .top-area-content .content-menu {
-	margin-top: 60px;
+	margin-top: 40px;
 	width: 25%;
 }
 
@@ -257,6 +259,10 @@ body {
 	color: #FFFFFF;
 	font-weight: 700;
 	letter-spacing: 8px;
+}
+.bottom-logo>a,
+.bottom-logo>a:focus{
+	color: #FFFFFF;
 }
 .middle-area .big-title{
 	position: absolute;
