--- a/css/home.css
+++ b/css/home.css
@@ -64,7 +64,10 @@ body {
 	font-weight: 700;
 	letter-spacing: 8px;
 }
-
+.logo a,
+.logo a:focus{
+	color: #FFFFFF;
+}
 .menu {
 	margin-top: 30px;
 	margin-left: 40px;
@@ -75,7 +78,9 @@ body {
 	margin-right: 40px;
 	font-weight: 700;
 }
-
+.menu .menu-items a{
+	color: #283452;
+}
 .menu .menu-items:hover {
 	border-bottom: 4px solid #E94F25;
 }
@@ -97,7 +102,7 @@ body {
 }
 
 .ssuo .search {
-	background: #003660;
+	background: #283452;
 	float: left;
 	width: 30px;
 	height: 26px;
@@ -323,6 +328,9 @@ body {
 	padding: 0 20px;
 	box-sizing: border-box;
 }
+.daohang .logo a{
+	color: #283452;
+}
 .si-dh li {
 	width: 100%;
 	height: 40px;
@@ -367,9 +375,12 @@ body {
 	float: left;
 	margin-right: 2%;
 	font-size: 14px;
-	color: #000000;
+	color: #283452;
 	line-height: 16px;
 	font-weight: 700;
+}
+.middle-area-content .menu-list ul li>a{
+	color: #283452;
 }
 
 .middle-area-content .menu-list>ul li:nth-of-type(2),
