--- a/css/AboutMe.css
+++ b/css/AboutMe.css
@@ -36,8 +36,13 @@ body {
 /*顶部开始*/
 
 .box {
+	width: 1100px;
 	position: relative;
-	width: 100%;
+	top: 0px;
+	left: 50%;
+	margin-left: -550px;
+	padding: 0 20px;
+	box-sizing: border-box;
 	height: 1750px;
 	z-index: 50;
 	overflow: hidden;
