--- a/css/home.css
+++ b/css/home.css
@@ -34,6 +34,7 @@ body {
 	width: 100%;
 	height: 100%;
 	opacity: 1;
+	background-color: #B1C0C8;
 	background-position: center center;
 	background-size: inherit;
 }
