--- a/css/AboutMe.css
+++ b/css/AboutMe.css
@@ -76,9 +76,11 @@ body {
 	font-weight: 700;
 	letter-spacing: 5px;
 }
-.logo a{
+
+.logo a {
 	color: #283452;
 }
+
 .ssuo {
 	float: right;
 	width: 320px;
@@ -124,7 +126,10 @@ body {
 
 
 /*logo搜索结束*/
+
+
 /*顶部开始*/
+
 .top-area-content {
 	margin-top: 40px;
 	position: relative;
@@ -134,13 +139,25 @@ body {
 	left: 0px;
 }
 
+.top-area-content .content-img {
+	width: 50%;
+	margin-right: 0px;
+	float: right;
+}
+
+.content-img img {
+	height: 645px;
+	float: right;
+}
+
 .top-area-content>div {
 	float: left;
 	margin-right: 2%;
 }
-
+.top-area-content>.yun{
+	margin-right: 0px;
+}
 .top-area-content .content-menu {
-	margin-top: 20px;
 	width: 18%;
 }
 
@@ -151,9 +168,14 @@ body {
 
 .content-menu .big-menu li {
 	width: 150px;
-	color: #888888;;
 	margin-bottom: 10px;
 	font-weight: 700;
+}
+.content-menu .big-menu li.xiaop a{
+	color: #888888;
+}
+.content-menu .big-menu .xiaop>p:nth-of-type(1) {
+	font-size: 10px;
 }
 
 .content-menu .big-menu li.menu-acticve {
@@ -193,18 +215,69 @@ body {
 	text-indent: 2em;
 	line-height: 20px;
 }
+#Company{
+	margin-top: 120px;
+}
+.bottom-menu {
+	width: 820px;
+	height: 500px;
+	margin-top: 250px;
+}
+#Allway{
+	display: none;
+}
 
-.top-area-content .content-img {
-	width: 50%;
+.bottom-menu li {
+	width: 18%;
+	margin-right: 2%;
+	float: left;
+	position: relative;
+}
+
+.bottom-menu li>i {
+	position: absolute;
+	top: -30px;
+	width: 20px;
+	height: 20px;
+	color: #283452;
+	font-size: 20px;
+}
+
+.bottom-menu li>span {
+	position: absolute;
+	top: 75px;
+	display: block;
+	width: 99%;
+	text-indent: 2em;
+	line-height: 20px;
+	text-align: justify;
+	text-justify: inter-ideograph;
+	/*IE*/
+	font-weight: 500;
+}
+
+.bottom-menu li:nth-of-type(1) {
+	width: 18%;
+}
+
+.bottom-menu li:nth-of-type(5) {
+	width: 20%;
 	margin-right: 0px;
 }
-
-.top-area-content .content-img img {
-	height: 740px;
-	float: right;
+.yun{
+	width: 200px;
+	height: 155px;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	margin-right: 0px;
+	display: none;
 }
 /*顶部结束*/
+
+
 /*底部开始*/
+
 .bottom-area {
 	height: 800px;
 	position: relative;
@@ -231,77 +304,5 @@ body {
 	background-color: #FFFFFF;
 }
 
-.bottom-area-title .title li {
-	margin-bottom: 20px;
-	position: relative;
-}
 
-.bottom-area-title .title .menu-acticve:hover span {
-	display: block;
-}
-
-.bottom-area-title .title li span {
-	display: none;
-	width: 10px;
-	height: 10px;
-	border-radius: 50%;
-	background-color: #E94F25;
-	position: absolute;
-	top: 10px;
-	left: -15px;
-}
-.bottom-area .logo-yun {
-	width: 18%;
-	height: 78px;
-	position: relative;
-}
-
-.bottom-area .logo-yun>img {
-	width: 150px;
-	position: absolute;
-	top: -55px;
-	left: 0px;
-}
-.bottom-area-title .bottom-menu {
-	width: 850px;
-	height: 500px;
-	margin-top: 112px;
-}
-
-.bottom-area-title .bottom-menu li {
-	width: 19%;
-	margin-right: 2%;
-	float: left;
-	position: relative;
-}
-
-.bottom-area-title .bottom-menu li>i {
-	position: absolute;
-	top: -30px;
-	width: 20px;
-	height: 20px;
-	color: #283452;
-	font-size: 20px;
-}
-
-.bottom-area-title .bottom-menu li>span {
-	position: absolute;
-	top: 75px;
-	display: block;
-	width: 99%;
-	text-indent: 2em;
-	line-height: 20px;
-	text-align: justify;
-	text-justify: inter-ideograph;/*IE*/
-	font-weight: 500;
-}
-
-.bottom-area-title .bottom-menu li:nth-of-type(1) {
-	width: 12%;
-}
-
-.bottom-area-title .bottom-menu li:nth-of-type(5) {
-	width: 21%;
-	margin-right: 0px;
-}
 /*底部结束*/
