--- a/css/ProductPlan2.css
+++ b/css/ProductPlan2.css
@@ -5,7 +5,7 @@ body {
 }
 .titlep{
 	color: #E94F25;
-	font-size:10px ;
+	font-size:13px ;
 	line-height: 14px;
 	font-weight: 700;
 }
@@ -22,7 +22,7 @@ body {
 	font-weight: 700;
 }
 .xzhongwen{
-	font-size: 10px;
+	font-size: 14px;
 	color: #283452;
 	line-height: 16px;
 	font-weight: 700;
@@ -34,7 +34,7 @@ body {
 	font-weight: 700;
 }
 .xyingwen{
-	font-size: 14px;
+	font-size: 18px;
 	color: #283452;
 	line-height: 20px;
 	font-weight: 700;
@@ -179,9 +179,12 @@ body {
 
 .content-menu .big-menu li {
 	width: 170px;
-	color: #888888;;
+	
 	margin-bottom: 10px;
 	font-weight: 700;
+}
+.content-menu .big-menu li a{
+	color: #888888;
 }
 
 .content-menu .big-menu li.menu-acticve {
@@ -272,8 +275,8 @@ body {
 	width: 564px;
 	color: #FFFFFF;
 	position: absolute;
-	top: 150px;
-	left: 450px;
+	top: 60px;
+	left: 350px;
 }
 .bottom-area-content .zhongwen,
 .bottom-area-content .yingwen{
@@ -283,7 +286,18 @@ body {
 .bottom-area-content .bottom-txt .big-title2{
 	margin-top: 30px;
 }
-.bottom-area-content .bottom-Article dd{
+.bottom-txt .bottom-Article dd{
+	text-indent: 2em;
+	font-size: 12px;
+	text-align: justify;
+    text-justify: inter-ideograph;/*IE*/
+}
+.bottom-txt .bottom-Article>div{
+	margin: 0px 0px 5px;
+	font-size: 16px;
+	font-weight: 700;
+}
+.bottom-txt .bottom-Article p{
 	text-indent: 2em;
 	font-size: 12px;
 	text-align: justify;
