--- a/css/common.css
+++ b/css/common.css
@@ -14,6 +14,11 @@ html,
 body {
 	height: 100%;
 	font-size: calc(100vw/7.5);
+	-moz-user-select:none;/*火狐*/
+    -webkit-user-select:none;/*webkit浏览器*/
+    -ms-user-select:none;/*IE10*/
+    -khtml-user-select:none;/*早期浏览器*/
+    user-select:none;
 }
 
 body,
